Change some images

--- a/Front-End/pages/assets/css/style.css
+++ b/Front-End/pages/assets/css/style.css
@@ -79,7 +79,7 @@ body {
 
 #banner {
   margin-top: 0 !important;
-  background-image: url("../images/BANNER\ SITE.png");
+  background-image: url("../images/BANNER\ SITE.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -89,7 +89,7 @@ body {
 
 #banner2 {
   margin-top: 0 !important;
-  background-image: url("../images/BANNER\ SITE.png");
+  background-image: url("../images/BANNER\ SITE.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -98,7 +98,7 @@ body {
 
 #banner3 {
   margin-top: 0 !important;
-  background-image: url("../images/BANNER\ SITE.png");
+  background-image: url("../images/BANNER\ SITE.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -107,7 +107,7 @@ body {
 
 #banner4 {
   margin-top: 0 !important;
-  background-image: url("../images/BANNER\ SITE.png");
+  background-image: url("../images/BANNER\ SITE.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -967,7 +967,7 @@ card {
   }
   #banner {
     margin-top: 75px;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 23vh;
@@ -977,7 +977,7 @@ card {
 
   #banner2 {
     margin-top: 75px;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -987,7 +987,7 @@ card {
 
   #banner3 {
     margin-top: 75px;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -997,7 +997,7 @@ card {
 
   #banner4 {
     margin-top: 75px;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -1332,7 +1332,7 @@ card {
 
   #banner {
     margin-top: 0;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -1342,7 +1342,7 @@ card {
 
   #banner2 {
     margin-top: 0;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -1352,7 +1352,7 @@ card {
 
   #banner3 {
     margin-top: 0;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -1362,7 +1362,7 @@ card {
 
   #banner4 {
     margin-top: 0;
-    background-image: url("../images/BANNER\ SITE.png");
+    background-image: url("../images/BANNER\ SITE.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
